--- a/index.html
+++ b/index.html
@@ -29,18 +29,42 @@
         <link rel="stylesheet" href="/styles/reset.css" />
         <link rel="stylesheet" href="/styles/global.css" />
         <!-- add link for page specific css -->
+        <link rel="stylesheet" href="/styles/home.css" />
     </head>
 
     <body>
         <header class="page-header">
-            <img class="logo" src="/assets/html_css_js.png" alt="logo" />
-            <p class="title">Supabase Web App</p>
+            <p class="title">Choose a game to play!</p>
             <nav>
-                <a href="/">Home</a>
+                <a href="/add-game/">Add a game</a>
                 <a id="sign-out-link" href="auth">Sign Out</a>
             </nav>
         </header>
 
-        <main></main>
+        <main>
+            <ul id="game-list">
+                <li>
+                    <h2>Karl's Pictionary Game</h2>
+                    <img src="/assets/game-placeholder.png" />
+                </li>
+                <li>
+                    <h2>Rio's Pictionary Game</h2>
+                    <img src="/assets/game-placeholder.png" />
+                </li>
+                <li>
+                    <h2>Erik's Pictionary Game</h2>
+                    <img src="/assets/game-placeholder.png" />
+                </li>
+                <li>
+                    <h2>Dylan's Pictionary Game</h2>
+                    <img src="/assets/game-placeholder.png" />
+                </li>
+            </ul>
+        </main>
     </body>
+    <footer>
+        <a id="flaticon" href="https://www.flaticon.com/free-icons/art" title="art icons"
+            >Art icons created by BZZRINCANTATION - Flaticon</a
+        >
+    </footer>
 </html>
