--- a/add-game/index.html
+++ b/add-game/index.html
@@ -7,7 +7,8 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
         <!-- title and favicon -->
-        <title>Supabase Web App</title>
+        <title>Pictionary</title>
+
         <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
 
         <!-- js -->
@@ -37,10 +38,23 @@
             <p class="title">Create a game!</p>
             <nav>
                 <a href="/">Home</a>
-                <a id="sign-out-link" href="auth">Sign Out</a>
+                <a id="sign-out-link" href="/auth">Sign Out</a>
             </nav>
         </header>
 
-        <main></main>
+        <main>
+            <form id="add-game-form">
+                <label>
+                    Title
+                    <input name="title" />
+                </label>
+                <label id="add-image-section">
+                    Add an image for your game!
+                    <input type="file" name="game-image" />
+                    <img src="../assets/game-placeholder.png" id="form-image" />
+                </label>
+                <button id="add-game-button">Create</button>
+            </form>
+        </main>
     </body>
 </html>
