--- a/auth/index.html
+++ b/auth/index.html
@@ -22,7 +22,9 @@
         <link rel="stylesheet" href="/styles/reset.css" />
         <link rel="stylesheet" href="/styles/global.css" />
         <link rel="stylesheet" href="/styles/form.css" />
-        <title>Auth</title>
+        <!-- title and favicon -->
+        <title>Pictionary</title>
+        <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
     </head>
 
     <body>
