Nav added to all pages

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -8,6 +8,7 @@
 
         <!-- title and favicon -->
         <title>Pictionary</title>
+
         <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
 
         <!-- js -->
@@ -15,7 +16,7 @@
             defer
             src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.35.7/dist/umd/supabase.min.js"
         ></script>
-        <script type="module" src="app.js"></script>
+        <script type="module" src="about-us.js"></script>
 
         <!-- fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,13 +30,13 @@
         <link rel="stylesheet" href="/styles/reset.css" />
         <link rel="stylesheet" href="/styles/global.css" />
         <!-- add link for page specific css -->
-        <link rel="stylesheet" href="/styles/home.css" />
+        <link rel="stylesheet" href="/styles/about-us.css" />
         <link rel="stylesheet" href="/styles/nav.css" />
     </head>
 
     <body>
         <header class="page-header">
-            <p class="title">Choose a game to play!</p>
+            <p class="title">About the creaters!</p>
         </header>
         <nav>
             <div id="menu">
@@ -44,36 +45,13 @@
                 <span></span>
                 <span></span>
                 <ul id="menu-list">
-                    <a href="/add-game"><li>Create Game Room</li></a>
-                    <a href="/about-us"><li>About</li></a>
-                    <a href="/auth"><li>Log out</li></a>
+                    <a href="../"><li>Game Rooms</li></a>
+                    <a href="../add-game"><li>Create Game Room</li></a>
+                    <a href="../auth"><li>Log out</li></a>
                 </ul>
             </div>
         </nav>
-        <main>
-            <ul id="game-list">
-                <li>
-                    <h2>Karl's Pictionary Game</h2>
-                    <img src="/assets/game-placeholder.png" />
-                </li>
-                <li>
-                    <h2>Rio's Pictionary Game</h2>
-                    <img src="/assets/game-placeholder.png" />
-                </li>
-                <li>
-                    <h2>Erik's Pictionary Game</h2>
-                    <img src="/assets/game-placeholder.png" />
-                </li>
-                <li>
-                    <h2>Dylan's Pictionary Game</h2>
-                    <img src="/assets/game-placeholder.png" />
-                </li>
-            </ul>
-        </main>
+
+        <main></main>
     </body>
-    <footer>
-        <a id="flaticon" href="https://www.flaticon.com/free-icons/art" title="art icons"
-            >Art icons created by BZZRINCANTATION - Flaticon</a
-        >
-    </footer>
 </html>
