--- a/add-game/index.html
+++ b/add-game/index.html
@@ -48,7 +48,9 @@
                 <ul id="menu-list">
                     <a href="../"><li>Game Rooms</li></a>
                     <a href="../about-us"><li>About</li></a>
-                    <a href="../auth"><li>Log out</li></a>
+                    <a href="../auth"
+                        ><li>Log out<img id="logout" src="../assets/logout.png" /></li
+                    ></a>
                 </ul>
             </div>
         </nav>
