--- a/about-us/index.html
+++ b/about-us/index.html
@@ -47,7 +47,9 @@
                 <ul id="menu-list">
                     <a href="../"><li>Game Rooms</li></a>
                     <a href="../add-game"><li>Create Game Room</li></a>
-                    <a href="../auth"><li>Log out</li></a>
+                    <a href="../auth"
+                        ><li>Log out<img id="logout" src="../assets/logout.png" /></li
+                    ></a>
                 </ul>
             </div>
         </nav>
