--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 <ul id="menu-list">
                     <a href="/add-game"><li>Create Game Room</li></a>
                     <a href="/about-us"><li>About</li></a>
-                    <a href="/auth"><li>Log out</li></a>
+                    <a href="../auth"
+                        ><li>Log out<img id="logout" src="../assets/logout.png" /></li
+                    ></a>
                 </ul>
             </div>
         </nav>
