--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <link rel="stylesheet" href="/styles/reset.css" />
         <link rel="stylesheet" href="/styles/global.css" />
         <!-- add link for page specific css -->
+        <link rel="stylesheet" href="/styles/main.css" />
         <link rel="stylesheet" href="/styles/canvas.css" />
     </head>
 
@@ -44,8 +45,19 @@
         </header>
 
         <main>
-            <canvas id="canvas-src" width="300" height="300"></canvas>
-            <canvas id="canvas-dest" width="300" height="300"></canvas>
+            <div class="canvas-container">
+                <h2>Drawing Canvas</h2>
+                <input type="color" name="color" id="color-selector" />
+                <select name="brush-width" id="brush-width">
+                    <option value="6">Light</option>
+                    <option value="10" selected>Reg</option>
+                    <option value="14">Bold</option>
+                </select>
+                <canvas id="canvas-src" width="300" height="300"></canvas>
+            </div>
+            <!-- <div class="canvas-container">
+                <canvas id="canvas-dest" width="300" height="300"></canvas>
+            </div> -->
         </main>
     </body>
 </html>
