Games uploading to supabase

--- a/add-game/index.html
+++ b/add-game/index.html
@@ -62,11 +62,12 @@
                 </label>
                 <label id="add-image-section">
                     Add an image for your game!
-                    <input type="file" name="game-image" />
+                    <input type="file" name="game-image" id="image-input" />
                     <img src="../assets/game-placeholder.png" id="form-image" />
                 </label>
                 <button id="add-game-button">Create</button>
             </form>
+            <p id="error-display"></p>
         </main>
     </body>
 </html>
