Images uploading to supabase

--- a/add-game/index.html
+++ b/add-game/index.html
@@ -62,7 +62,7 @@
                 </label>
                 <label id="add-image-section">
                     Add an image for your game!
-                    <input type="file" name="game-image" id="image-input" />
+                    <input type="file" name="image" id="image-input" />
                     <img src="../assets/game-placeholder.png" id="form-image" />
                 </label>
                 <button id="add-game-button">Create</button>
