--- a/about-us/index.html
+++ b/about-us/index.html
@@ -36,7 +36,7 @@
 
     <body>
         <header class="page-header">
-            <p class="title">About the creaters!</p>
+            <p class="title">About the creators!</p>
         </header>
         <nav>
             <div id="menu">
