Guesses uploading to supabase

--- a/game/index.html
+++ b/game/index.html
@@ -65,7 +65,7 @@
 
             <div>
                 <form id="add-guess-form">
-                    <input name="text" placeholder="Add your guess here..." />
+                    <input name="guess" placeholder="Add your guess here..." />
                     <button>Submit</button>
                 </form>
             </div>
