--- a/game/index.html
+++ b/game/index.html
@@ -61,16 +61,16 @@
                 <img id="game-image" src="../assets/game-placeholder.png" />
             </section>
 
-            <p id="error-display"></p>
-
-            <div>
-                <form id="add-guess-form">
-                    <input name="guess" placeholder="Add your guess here..." />
-                    <button>Submit</button>
-                </form>
-            </div>
-
-            <ul id="guess-list"></ul>
+            <section #add-guess-section>
+                <ul id="guess-list"></ul>
+                <div>
+                    <form id="add-guess-form">
+                        <input name="guess" placeholder="Add your guess here..." />
+                        <button>Submit</button>
+                    </form>
+                </div>
+            </section>
         </main>
+        <p id="error-display"></p>
     </body>
 </html>
