all button to clear canvas

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <main>
             <div class="canvas-container">
                 <h2>Drawing Canvas</h2>
+                <button id="clear-canvas">Reset</button>
                 <div class="drawing-mode-selectors">
                     <input type="radio" id="draw-mode" name="mode-selector" value="draw" checked />
                     <label for="draw-mode">Draw ✏️</label>
