--- a/about-us/index.html
+++ b/about-us/index.html
@@ -25,6 +25,10 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&family=Titillium+Web:wght@200;400;600&display=swap"
         />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+            rel="stylesheet"
+        />
 
         <!-- css -->
         <link rel="stylesheet" href="/styles/reset.css" />
@@ -32,6 +36,8 @@
         <!-- add link for page specific css -->
         <link rel="stylesheet" href="/styles/about-us.css" />
         <link rel="stylesheet" href="/styles/nav.css" />
+        <!-- NES CSS theme -->
+        <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
     </head>
 
     <body>
