--- a/game/index.html
+++ b/game/index.html
@@ -25,6 +25,10 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&family=Titillium+Web:wght@200;400;600&display=swap"
         />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+            rel="stylesheet"
+        />
 
         <!-- css -->
         <link rel="stylesheet" href="/styles/reset.css" />
@@ -32,11 +36,13 @@
         <!-- add link for page specific css -->
         <link rel="stylesheet" href="/styles/game.css" />
         <link rel="stylesheet" href="/styles/nav.css" />
+        <!-- NES CSS theme -->
+        <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
     </head>
 
     <body>
         <header class="page-header">
-            <p class="title">Let's play!</p>
+            <img src="/assets/logo.png" id="logo-image" />
         </header>
 
         <nav>
@@ -56,8 +62,12 @@
         </nav>
 
         <main>
+            <h2 class="header-title">
+                <img src="../assets/pencil.png" id="pencil-image" /> Let's play!
+                <img src="../assets/pencil.png" id="pencil-image-two" />
+            </h2>
             <section class="game-summary">
-                <h2 id="game-title">Post</h2>
+                <p id="game-title">Post</p>
                 <img id="game-image" src="../assets/game-placeholder.png" />
             </section>
 
