--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <!-- title and favicon -->
         <title>Pictionary</title>
-        <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
 
         <!-- js -->
         <script
@@ -24,6 +24,12 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&family=Titillium+Web:wght@200;400;600&display=swap"
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+            rel="stylesheet"
+        />
 
         <!-- css -->
         <link rel="stylesheet" href="/styles/reset.css" />
@@ -31,11 +37,12 @@
         <!-- add link for page specific css -->
         <link rel="stylesheet" href="/styles/home.css" />
         <link rel="stylesheet" href="/styles/nav.css" />
+        <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
     </head>
 
     <body>
         <header class="page-header">
-            <p class="title">Choose a game to play!</p>
+            <img src="/assets/logo.png" id="logo-image" />
         </header>
         <nav>
             <div id="menu">
@@ -53,6 +60,10 @@
             </div>
         </nav>
         <main>
+            <h2 class="header-title">
+                <img src="../assets/pencil.png" id="pencil-image" /> Choose a game to play!
+                <img src="../assets/pencil.png" id="pencil-image-two" />
+            </h2>
             <ul id="game-list">
                 <li>
                     <h2>Karl's Pictionary Game</h2>
@@ -73,9 +84,5 @@
             </ul>
         </main>
     </body>
-    <footer>
-        <a id="flaticon" href="https://www.flaticon.com/free-icons/art" title="art icons"
-            >Art icons created by BZZRINCANTATION - Flaticon</a
-        >
-    </footer>
+    <footer></footer>
 </html>
