--- a/game/index.html
+++ b/game/index.html
@@ -74,6 +74,7 @@
                 <img id="game-image" src="../assets/game-placeholder.png" />
             </section>
             <section class="game-summary canvas-options">
+                <span id="timer"></span>
                 <input type="color" name="color" id="color-selector" class="nes-input" />
                 <button type="button" id="draw-mode" class="nes-btn is-primary">
                     <img src="../assets/pencil (1).png" class="draw-mode-icon" />
