Styled game page

--- a/game/index.html
+++ b/game/index.html
@@ -69,11 +69,11 @@
                 <img src="../assets/pencil.png" id="pencil-image" /> Let's play!
                 <img src="../assets/pencil.png" id="pencil-image-two" />
             </h2>
-            <section class="game-summary">
+            <section class="game-summary nes-container is-rounded">
                 <p id="game-title">Post</p>
                 <img id="game-image" src="../assets/game-placeholder.png" />
             </section>
-            <section class="game-summary canvas-options">
+            <section class="game-summary canvas-options nes-container is-rounded">
                 <span id="timer"></span>
                 <input type="color" name="color" id="color-selector" class="nes-input" />
                 <button type="button" id="draw-mode" class="nes-btn is-primary">
@@ -91,7 +91,7 @@
                 <div>
                     <form id="add-guess-form">
                         <input name="guess" placeholder="Add your guess here..." />
-                        <button>Submit</button>
+                        <button>Guess</button>
                     </form>
                     <ul id="guess-list"></ul>
                 </div>
