--- a/auth/index.html
+++ b/auth/index.html
@@ -18,10 +18,16 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&family=Titillium+Web:wght@200;400;600&display=swap"
         />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+            rel="stylesheet"
+        />
 
         <link rel="stylesheet" href="/styles/reset.css" />
         <link rel="stylesheet" href="/styles/global.css" />
         <link rel="stylesheet" href="/styles/form.css" />
+        <!-- NES CSS theme -->
+        <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
         <!-- title and favicon -->
         <title>Pictionary</title>
         <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
