Updated game styling again

--- a/game/index.html
+++ b/game/index.html
@@ -69,11 +69,11 @@
                 <img src="../assets/pencil.png" id="pencil-image" /> Let's play!
                 <img src="../assets/pencil.png" id="pencil-image-two" />
             </h2>
-            <section class="game-summary nes-container is-rounded">
+            <section class="game-summary nes-container">
                 <p id="game-title">Post</p>
                 <img id="game-image" src="../assets/game-placeholder.png" />
             </section>
-            <section class="game-summary canvas-options nes-container is-rounded">
+            <section class="game-summary canvas-options nes-container">
                 <span id="timer"></span>
                 <input type="color" name="color" id="color-selector" class="nes-input" />
                 <button type="button" id="draw-mode" class="nes-btn is-primary">
@@ -85,7 +85,7 @@
                 <button id="clear-canvas" class="nes-btn">Reset</button>
             </section>
 
-            <canvas id="canvas-src"></canvas>
+            <canvas id="canvas-src" class="nes-container"></canvas>
 
             <section #add-guess-section>
                 <div>
