More styling updates, smaller margins

--- a/game/index.html
+++ b/game/index.html
@@ -69,11 +69,11 @@
                 <img src="../assets/pencil.png" id="pencil-image" /> Let's play!
                 <img src="../assets/pencil.png" id="pencil-image-two" />
             </h2>
-            <section class="game-summary nes-container">
+            <section id="game-view" class="game-summary nes-input">
                 <p id="game-title">Post</p>
                 <img id="game-image" src="../assets/game-placeholder.png" />
             </section>
-            <section class="game-summary canvas-options nes-container">
+            <section id="canvas-options" class="game-summary canvas-options nes-input">
                 <span id="timer"></span>
                 <input type="color" name="color" id="color-selector" class="nes-input" />
                 <button type="button" id="draw-mode" class="nes-btn is-primary">
