--- a/about-us/index.html
+++ b/about-us/index.html
@@ -42,7 +42,7 @@
 
     <body>
         <header class="page-header">
-            <p class="title">About the creators!</p>
+            <p class="title"></p>
         </header>
         <nav>
             <div id="menu">
@@ -63,7 +63,7 @@
         <main>
             <h1 style="text-align: center">About the Creators</h1>
             <div class="card-container">
-                <div class="card nes-container">
+                <div class="card nes-input">
                     <img src="/assets/karl.png" alt="Karl" />
                     <div class="container">
                         <h2 class="card-name">Karl Wernsman</h2>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
 
-                <div class="card nes-container">
+                <div class="card nes-input">
                     <img src="/assets/rio.png" alt="Rio" style=/>
                     <div class="container">
                         <h2 class="card-name">Rio Edwards</h2>
@@ -101,14 +101,20 @@
                     </div>
                 </div>
 
-                <div class="card nes-container">
+                <div class="card nes-input">
                     <img src="/assets/dylan.png" alt="Dylan" />
                     <div class="container">
                         <h2 class="card-name">Dylan Flanagan</h2>
                         <p class="creator-title">Full-Stack Software Developer</p>
                         <div>
-                            <a><i class="nes-icon linkedin is-medium"></i></a>
-                            <a><i class="nes-icon github is-medium"></i></a>
+                            <a
+                                href="https://www.linkedin.com/in/flanagan-dylan
+                            "
+                                ><i class="nes-icon linkedin is-medium"></i
+                            ></a>
+                            <a href="https://github.com/Dylan-Flanagan"
+                                ><i class="nes-icon github is-medium"></i
+                            ></a>
                             <a href="mailto: dylflanagan@gmail.com"
                                 ><i class="nes-icon gmail is-medium"></i
                             ></a>
@@ -116,7 +122,7 @@
                     </div>
                 </div>
 
-                <div class="card nes-container">
+                <div class="card nes-input">
                     <img src="/assets/erik.png" alt="Erik" />
                     <div class="container">
                         <h2 class="card-name">Erik Baxstrom</h2>
