Words generating from supabase

--- a/auth/index.html
+++ b/auth/index.html
@@ -26,8 +26,10 @@
         <link rel="stylesheet" href="/styles/reset.css" />
         <link rel="stylesheet" href="/styles/global.css" />
         <link rel="stylesheet" href="/styles/form.css" />
+
         <!-- NES CSS theme -->
         <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
+
         <!-- title and favicon -->
         <title>Pictionary</title>
         <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
@@ -49,7 +51,7 @@
                     Password
                     <input type="password" name="password" required />
                 </label>
-                <button></button>
+                <button class="nes-btn is-primary"></button>
                 <p class="error"></p>
                 <a href=""></a>
             </form>
