--- a/game/index.html
+++ b/game/index.html
@@ -69,10 +69,18 @@
                 <img src="../assets/pencil.png" id="pencil-image" /> Let's play!
                 <img src="../assets/pencil.png" id="pencil-image-two" />
             </h2>
+
             <section id="game-view" class="game-summary nes-input">
                 <p id="game-title">Post</p>
                 <img id="game-image" src="../assets/game-placeholder.png" />
             </section>
+
+            <section id="generate-word-section" class="nes-input">
+                <h3>Click below to generate a word to draw!</h3>
+                <button class="nes-btn is-warning" id="generate-button">GENERATE A WORD</button>
+                <p id="random-word"></p>
+            </section>
+
             <section id="canvas-options" class="game-summary canvas-options nes-input">
                 <span id="timer"></span>
                 <input type="color" name="color" id="color-selector" class="nes-input" />
