not working. breaking for lunch

--- a/game/index.html
+++ b/game/index.html
@@ -87,6 +87,8 @@
 
             <canvas id="canvas-src"></canvas>
 
+            <button id="start-game" class="nes-btn">Start Game</button>
+
             <section #add-guess-section>
                 <div>
                     <form id="add-guess-form">
