Edited CSS Elements

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -61,7 +61,7 @@
         </nav>
 
         <main>
-            <h1 style="text-align: center">About the Creators</h1>
+            <h1 class="about-title">About the Creators</h1>
             <div class="card-container">
                 <div class="card nes-input">
                     <img src="/assets/karl.png" alt="Karl" />
