Clean Up from merge

--- a/game/index.html
+++ b/game/index.html
@@ -93,7 +93,9 @@
                 <button id="clear-canvas" class="nes-btn">Reset</button>
             </section>
 
-            <canvas id="canvas-src" class="nes-container"></canvas>
+            <section id="canvas-section" class="nes-container">
+                <canvas id="canvas-src"></canvas>
+            </section>
 
             <section #add-guess-section>
                 <div>
