--- a/add-game/index.html
+++ b/add-game/index.html
@@ -56,6 +56,7 @@
                 <span></span>
                 <ul id="menu-list">
                     <a href="../"><li>Game Rooms</li></a>
+                    <a href="../leaderboard"><li>Leaderboard</li></a>
                     <a href="../about-us"><li>About</li></a>
                     <a href="../auth"
                         ><li>Log out<img id="logout" src="../assets/logout.png" /></li
