--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                 <ul id="menu-list">
                     <a href="/add-game"><li>Create Game Room</li></a>
                     <a href="/about-us"><li>About</li></a>
+                    <a href="/create-profile"><li>Update Profile</li></a>
+                    <a href="/leaderboard"><li>Leaderboard</li></a>
                     <a href="../auth"
                         ><li>Log out<img id="logout" src="../assets/logout.png" /></li
                     ></a>
