--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <ul id="menu-list">
                     <a href="/add-game"><li>Create Game Room</li></a>
                     <a href="/about-us"><li>About</li></a>
-                    <a href="../auth"
+                    <a href="/auth"
                         ><li>Log out<img id="logout" src="../assets/logout.png" /></li
                     ></a>
                 </ul>
