Bug fixes with timer / Refactoring

--- a/game/index.html
+++ b/game/index.html
@@ -100,7 +100,7 @@
             <section #add-guess-section>
                 <div>
                     <form id="add-guess-form">
-                        <input name="guess" placeholder="Add your guess here..." />
+                        <input name="guess" placeholder="Add your guess here..." required />
                         <button>Guess</button>
                     </form>
                     <ul id="guess-list"></ul>
