--- a/add-game/index.html
+++ b/add-game/index.html
@@ -58,9 +58,7 @@
                     <a href="../"><li>Game Rooms</li></a>
                     <a href="../leaderboard"><li>Leaderboard</li></a>
                     <a href="../about-us"><li>About</li></a>
-                    <a href="../auth"
-                        ><li>Log out<img id="logout" src="../assets/logout.png" /></li
-                    ></a>
+                    <a href="../auth"><li>Log out</li></a>
                 </ul>
             </div>
         </nav>
