--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
                     <a href="/about-us"><li>About</li></a>
                     <a href="/create-profile"><li>Update Profile</li></a>
                     <a href="/leaderboard"><li>Leaderboard</li></a>
-                    <a href="../auth"
-                        ><li>Log out<img id="logout" src="../assets/logout.png" /></li
-                    ></a>
+                    <a href="../auth"><li>Log out</li></a>
                 </ul>
             </div>
         </nav>
