Fixed logout bug - GO ERIK git push origin MVP
'

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -53,9 +53,9 @@
                 <ul id="menu-list">
                     <a href="../"><li>Game Rooms</li></a>
                     <a href="../add-game"><li>Create Game Room</li></a>
-                    <a href="../auth"
-                        ><li>Log out<img id="logout" src="../assets/logout.png" /></li
-                    ></a>
+                    <a href="../create-profile"><li>Update Profile</li></a>
+                    <a href="../leaderboard"><li>Leaderboard</li></a>
+                    <a href="../auth" id="sign-out-link"><li>Log out</li></a>
                 </ul>
             </div>
         </nav>
