--- a/create-profile/index.html
+++ b/create-profile/index.html
@@ -54,7 +54,7 @@
                     <a href="../"><li>Game Rooms</li></a>
                     <a href="../add-game"><li>Create Game Room</li></a>
                     <a href="../leaderboard"><li>Leaderboard</li></a>
-                    <a href="../auth"><li>Log out</li></a>
+                    <a href="../auth" id="sign-out-link"><li>Log out</li></a>
                 </ul>
             </div>
         </nav>
