--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -54,7 +54,8 @@
                     <a href="../"><li>Game Rooms</li></a>
                     <a href="../add-game"><li>Create Game Room</li></a>
                     <a href="../create-profile"><li>Update Profile</li></a>
-                    <a href="../auth"><li>Log out</li></a>
+                    <a href="../about-us"><li>About</li></a>
+                    <a href="../auth" id="sign-out-link"><li>Log out</li></a>
                 </ul>
             </div>
         </nav>
