--- a/create-profile/index.html
+++ b/create-profile/index.html
@@ -63,12 +63,22 @@
             <form id="profile-form">
                 <label>
                     <div>Username</div>
-                    <input name="username" required placeholder="choose a username..." />
+                    <input
+                        name="username"
+                        required
+                        placeholder="choose a username..."
+                        class="nes-input"
+                    />
                 </label>
 
                 <label>
                     <div>Pronouns</div>
-                    <textarea name="pronouns" required placeholder="pronouns"></textarea>
+                    <textarea
+                        name="pronouns"
+                        required
+                        placeholder="pronouns"
+                        class="nes-textarea"
+                    ></textarea>
                 </label>
 
                 <label>
@@ -79,18 +89,17 @@
                         name="avatar_url"
                         placeholder="upload an image..."
                     />
-                    <img
-                        id="preview"
-                        class="avatar"
-                        alt="avatar preview"
-                        src="/assets/pencil (1).png"
-                    />
                 </label>
+                <img
+                    id="preview"
+                    class="avatar"
+                    alt="avatar preview"
+                    src="/assets/pencil (1).png"
+                />
 
-                <button id="create-profile-button">Create Profile</button>
-
-                <p id="error-display"></p>
+                <button id="create-profile-button" class="nes-btn">Create Profile</button>
             </form>
+            <p id="error-display"></p>
         </main>
     </body>
 </html>
