Fixed real-time reset

--- a/create-profile/index.html
+++ b/create-profile/index.html
@@ -87,7 +87,7 @@
                     />
                 </label>
 
-                <button id="create-profile-button">Create Profile</button>
+                <button id="create-profile-button" class="nes-btn">Create Profile</button>
 
                 <p id="error-display"></p>
             </form>
