implement claim drawer button and logic

--- a/game/index.html
+++ b/game/index.html
@@ -76,7 +76,8 @@
             <section id="generate-word-section" class="nes-input">
                 <h3>Click below to generate a word to draw!</h3>
                 <button id="start-game" class="nes-btn">Start Game</button>
-                <p id="random-word"></p>
+                <p id="random-word" class="hidden"></p>
+                <button class="nes-btn" id="claim-drawer-button">Claim Drawer</button>
             </section>
 
             <section id="canvas-options" class="game-summary canvas-options nes-input">
