--- a/game/index.html
+++ b/game/index.html
@@ -97,6 +97,7 @@
             </section>
 
             <section #add-guess-section>
+                <p id="game-info"></p>
                 <div>
                     <form id="add-guess-form">
                         <input name="guess" placeholder="Add your guess here..." required />
