Trying to fix mixed content eslint check

--- a/game/index.html
+++ b/game/index.html
@@ -16,7 +16,7 @@
             defer
             src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.35.7/dist/umd/supabase.min.js"
         ></script>
-        <script defer src="http://unpkg.com/fabric/dist/fabric.min.js"></script>
+        <script defer src="https://unpkg.com/fabric/dist/fabric.min.js"></script>
         <script type="module" src="canvas.js"></script>
         <script type="module" src="game.js"></script>
 
