--- a/add-game/index.html
+++ b/add-game/index.html
@@ -56,7 +56,7 @@
                 <span></span>
                 <ul id="menu-list">
                     <a href="../"><li>Game Rooms</li></a>
-                    <a href="../leaderboard"><li>Leaderboard</li></a>
+                    <!-- <a href="../leaderboard"><li>Leaderboard</li></a> -->
                     <a href="../about-us"><li>About</li></a>
                     <a href="../auth" id="sign-out-link"><li>Log out</li></a>
                 </ul>
