--- a/game/index.html
+++ b/game/index.html
@@ -57,6 +57,7 @@
                 <ul id="menu-list">
                     <a href="../"><li>Game Rooms</li></a>
                     <a href="../about-us"><li>About</li></a>
+                    <a href="../create-profile"><li>Update Profile</li></a>
                     <a href="../auth" id="sign-out-link"><li>Log out</li></a>
                 </ul>
             </div>
