--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <a href="/add-game"><li>Create Game Room</li></a>
                     <a href="/about-us"><li>About</li></a>
                     <a href="/create-profile"><li>Update Profile</li></a>
-                    <a href="/leaderboard"><li>Leaderboard</li></a>
+                    <!-- <a href="/leaderboard"><li>Leaderboard</li></a> -->
                     <a href="../auth" id="sign-out-link"><li>Log out</li></a>
                 </ul>
             </div>
