More sign up bus

--- a/create-profile/index.html
+++ b/create-profile/index.html
@@ -53,6 +53,7 @@
                 <ul id="menu-list">
                     <a href="../"><li>Game Rooms</li></a>
                     <a href="../add-game"><li>Create Game Room</li></a>
+                    <a href="../about-us"><li>About</li></a>
                     <!-- <a href="../leaderboard"><li>Leaderboard</li></a> -->
                     <a href="../auth" id="sign-out-link"><li>Log out</li></a>
                 </ul>
