CSS styling updates

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -9,7 +9,7 @@
         <!-- title and favicon -->
         <title>Pictionary</title>
 
-        <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
 
         <!-- js -->
         <script
@@ -32,7 +32,7 @@
 
         <!-- css -->
         <link rel="stylesheet" href="/styles/reset.css" />
-        <link rel="stylesheet" href="/styles/global.css" />
+        <link rel="stylesheet" href="../styles/global.css" />
         <!-- add link for page specific css -->
         <link rel="stylesheet" href="/styles/about-us.css" />
         <link rel="stylesheet" href="/styles/nav.css" />
@@ -42,7 +42,7 @@
 
     <body>
         <header class="page-header">
-            <p class="title"></p>
+            <img src="../assets/logo.png" id="logo-image" />
         </header>
         <nav>
             <div id="menu">
@@ -140,6 +140,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div id="credits">
+                <p>CSS credits go to NES.css, an incredible framework for a retro game style.</p>
             </div>
         </main>
     </body>
