--- a/create-profile/index.html
+++ b/create-profile/index.html
@@ -65,14 +65,14 @@
                 <img src="../assets/pencil.png" id="pencil-image" /> Edit Your Profile
                 <img src="../assets/pencil.png" id="pencil-image-two" />
             </h2>
-            <form id="profile-form" class="nes-container">
+            <form id="profile-form" class="nes-input">
                 <label>
                     <div>Username</div>
                     <input
                         name="username"
                         required
                         placeholder="choose a username..."
-                        class="nes-input"
+                        class="nes-input is-error"
                     />
                 </label>
 
@@ -82,7 +82,7 @@
                         name="pronouns"
                         required
                         placeholder="pronouns"
-                        class="nes-textarea"
+                        class="nes-textarea is-error"
                     ></textarea>
                 </label>
 
