--- a/game/index.html
+++ b/game/index.html
@@ -75,10 +75,12 @@
             </section>
 
             <section id="generate-word-section" class="nes-input">
-                <h3>Click below to generate a word to draw!</h3>
-                <button id="start-game" class="nes-btn">Start Game</button>
+                <h3>Click start game to generate a word!</h3>
+                <div id="game-buttons">
+                    <button id="start-game" class="nes-btn">Start Game</button>
+                    <button class="nes-btn" id="claim-drawer-button">Claim Drawer</button>
+                </div>
                 <p id="random-word" class="hidden"></p>
-                <button class="nes-btn" id="claim-drawer-button">Claim Drawer</button>
             </section>
 
             <section id="canvas-options" class="game-summary canvas-options nes-input">
